feat: list directories uploaded to the server

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -18,6 +18,13 @@ body {
     justify-content: space-between;
 }
 
+.file-list-loading-container{
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .editor-timestep-viewer-container{
     width: 100%;
 }
