--- a/client/src/App.css
+++ b/client/src/App.css
@@ -46,6 +46,94 @@
     opacity: 0.9;
 }
 
+.dislocation-result-type{
+    width: .4rem;
+    height: .4rem;
+    border-radius: 50%;
+}
+
+.dislocation-result-item-title{
+    font-size: .96rem;
+}
+
+.dislocation-result-item-header-container{
+    display: flex;
+    align-items: center;
+    gap: .5rem;
+}
+
+.dislocation-results-container{
+    top: 7rem;
+    left: 2rem;
+    width: 400px;
+    height: 550px;
+    overflow: hidden;
+}
+
+.dislocation-results-summary-container{
+    position: absolute;
+    bottom: 0;
+    display: flex;
+    backdrop-filter: blur(5px);
+    background-color: rgb(30 30 30 / 91%);
+    border: 1px solid #212121;
+    left: 0;
+    bottom: -11px;
+    border-radius: 2rem;
+    padding: .5rem 1rem;
+    margin: 0 auto;
+    width: 97%;
+    justify-content: space-between;
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.dislocation-result-data-container{
+    display: flex;
+    flex-direction: column;
+    gap: .2rem;
+}
+
+.dislocation-result-data{
+    display: flex;
+    width: 100%;
+    gap: .5rem;
+    align-items: center;
+}
+
+.dislocation-result-item{
+    display: flex;
+    flex-direction: column;
+    gap: .2rem;
+}
+
+.dislocation-result-data .data-value{
+    color: #b3b3b3;
+}
+
+.dislocation-summary-item{
+    display: flex;
+    gap: .5rem;
+}
+
+.dislocation-summary-value{
+    font-size: .8rem;
+}
+
+.dislocation-summary-label{
+    font-size: .8rem;
+}
+
+.dislocation-results-body-container{
+    max-height: 500px;
+    padding-bottom: 2rem;
+    overflow-y: scroll;
+    display: flex;
+    flex-direction: column;
+    gap: 1.2rem;
+}
+
 .editor-dislocations-button-container:active {
     transform: scale(.99);
 }
