--- a/client/src/components/organisms/MonacoEditor/MonacoEditor.css
+++ b/client/src/components/organisms/MonacoEditor/MonacoEditor.css
@@ -4,6 +4,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    resize: both;
     width: 800px;
     height: 600px;
     min-width: 500px;
