--- a/client/src/App.css
+++ b/client/src/App.css
@@ -20,6 +20,18 @@
     font-weight: 500;
 }
 
+.editor-analyzing-container{
+    position: absolute;
+    backdrop-filter: blur(1px);
+    background-color: rgba(0, 0, 0, .3);
+    width: 100%;
+    height: 100vh;
+    z-index: 1000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .editor-camera-info-description {
     font-weight: 400;
     color: #d8d8d8;
