--- a/client/src/assets/stylesheets/general.css
+++ b/client/src/assets/stylesheets/general.css
@@ -1,4 +1,4 @@
-* {
+*{
     margin: 0;
     padding: 0;
     outline: none;
@@ -6,7 +6,17 @@
     box-sizing: border-box;
 }
 
-body {
+html, body{
+    height: 100%;
+    width: 100%;
+}
+
+#root{
+    width: 100%;
+    height: 100vh;
+}
+
+body{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
     overflow: hidden;
 }
@@ -28,4 +38,10 @@ body {
 
 ::-webkit-scrollbar-thumb:hover {
     background-color: #d3d3d3;
+}
+
+i{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
