--- a/client/src/pages/protected/Dashboard/Dashboard.css
+++ b/client/src/pages/protected/Dashboard/Dashboard.css
@@ -1,3 +1,7 @@
+.dashboard-main{
+    display: flex;
+}
+
 .sidebar-container{
     width: 350px;
     height: 100vh;
@@ -87,6 +91,61 @@
     outline: none;
 }
 
+.dashboard-container{
+    padding: 2rem;
+}
+
 .sidebar-new-team-title{
     font-size: .9rem;
+}
+
+.simulation-container{
+    width: 340px;
+    height: 190px;
+    cursor: pointer;
+}
+
+.simulation-image{
+    width: 100%;
+    height: 100%;
+    border-radius: .8rem;
+    transition: .1s;
+}
+
+.simulation-container:hover .simulation-image{
+    border: 3px solid rgb(37, 137, 255);
+}
+
+.simulation-options-icon-container{
+    font-size: 1.3rem;
+    transition: .3s;
+    opacity: 0;
+}
+
+.simulation-container:hover .simulation-options-icon-container{
+    opacity: 1;
+}
+
+.simulation-caption-left-container{
+    display: flex;
+    flex-direction: column;
+    gap: .5rem;
+    width: 100%;
+}
+
+.simulation-caption-container{
+    padding-top: .5rem;
+    display: flex;
+    align-items: center;
+    gap: .5rem;
+}
+
+.simulation-last-edited{
+    font-size: .9rem;
+    color: #555555;
+}
+
+.simulation-caption-title{
+    font-weight: 450;
+    font-size: 1rem;
 }
