--- a/client/src/pages/protected/Dashboard/Dashboard.css
+++ b/client/src/pages/protected/Dashboard/Dashboard.css
@@ -46,7 +46,7 @@
 }
 
 .sidebar-user-avatar-container{
-    background-image: linear-gradient(to right, #7028e4 0%, #4a57ca 100%);
+    background-image: linear-gradient(to right, #2b2b2b 0%, #5f5f5f 100%);
     width: 40px;
     border-radius: .5rem;
     height: 40px;
@@ -113,7 +113,7 @@
     padding: .5rem 1rem;
     cursor: pointer;
     border-radius: .5rem;
-    background-color: rgb(37, 137, 255);
+    background-color: rgb(16 16 16 / 90%);
     gap: .5rem;
     transition: .2s;
 }
