--- a/client/src/pages/protected/Dashboard/Dashboard.css
+++ b/client/src/pages/protected/Dashboard/Dashboard.css
@@ -7,11 +7,26 @@
 .simulation-image{
     width: 100%;
     height: 100%;
-    border-radius: .8rem;
-    transition: .1s;
 }
 
-.simulation-container:hover .simulation-image{
+.simulation-cover-container{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    border-radius: .8rem;
+    transition: .1s;
+    justify-content: center;
+    align-items: center;
+    background-color: #dadada;
+    box-shadow: 0 0 0px 1px rgb(205 205 205 / 80%);
+    overflow: hidden;
+}
+
+.simulation-cover-icon-container{
+    font-size: 1.8rem;
+}
+
+.simulation-container:hover .simulation-cover-container{
     border: 3px solid rgb(37, 137, 255);
 }
 
@@ -33,7 +48,7 @@
 }
 
 .simulation-caption-container{
-    padding-top: .5rem;
+    padding-top: 1rem;
     display: flex;
     align-items: center;
     gap: .5rem;
@@ -47,4 +62,12 @@
 .simulation-caption-title{
     font-weight: 450;
     font-size: 1rem;
+}
+
+.trajectories-container{
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+    gap: 1.5rem;
+    row-gap: 6rem;
 }
