--- a/client/src/pages/protected/Canva/Canva.css
+++ b/client/src/pages/protected/Canva/Canva.css
@@ -1,3 +1,15 @@
+.loader-layer-container{
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, .2);
+    backdrop-filter: blur(1.5px);
+    position: absolute;
+    z-index: 1000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .editor-container {
     width: 100%;
     height: 100vh;
