--- a/client/src/components/atoms/SidebarUserAvatar/SidebarUserAvatar.css
+++ b/client/src/components/atoms/SidebarUserAvatar/SidebarUserAvatar.css
@@ -2,6 +2,12 @@
     display: flex;
     align-items: center;
     gap: 1rem;
+    cursor: pointer;
+    transition: .2s;
+}
+
+.sidebar-user-container:hover{
+    opacity: .8;
 }
 
 .sidebar-user-avatar{
