--- a/client/src/components/organisms/TrajectoryList/TrajectoryList.css
+++ b/client/src/components/organisms/TrajectoryList/TrajectoryList.css
@@ -4,6 +4,13 @@
     left: 2rem;
 }
 
+.file-list-loading-container{
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .file-list-body-container {
     display: flex;
     width: 100%;
