--- a/client/src/pages/protected/Canvas/Canvas.css
+++ b/client/src/pages/protected/Canvas/Canvas.css
@@ -10,26 +10,41 @@
     align-items: center;
 }
 
+.editor-sidebar-options-wrapper-container{
+    padding: 1.5rem;
+}
+
+.editor-sidebar-options-container{
+    display: flex;
+    background-color: rgba(49, 49, 49, 0.2);
+    padding: .5rem;
+    border-radius: 5rem;
+    justify-content: space-between;
+}
+
+.editor-sidebar-option-container.selected{
+    background-color: rgba(49, 49, 49, 0.8);
+}
+
+.editor-sidebar-option-container{
+    border-radius: 5rem;
+    width: 48%;
+    height: 45px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.editor-sidebar-option-title{
+    font-size: 1.05rem;
+    font-weight: 500;
+}
+
 .editor-container {
     width: 100%;
     height: 100vh;
     display: flex;
     justify-content: space-between;
-}
-
-.editor-camera-info-container {
-    position: absolute;
-    z-index: 100;
-    top: 2rem;
-    left: 2rem;
-    color: #FFF;
-    display: flex;
-    flex-direction: column;
-    gap: .8rem;
-}
-
-.editor-camera-info-title {
-    font-weight: 500;
 }
 
 .editor-analyzing-container{
@@ -42,11 +57,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-.editor-camera-info-description {
-    font-weight: 400;
-    color: #d8d8d8;
 }
 
 .dislocation-result-type{
@@ -161,4 +171,152 @@
 .file-upload-loader-container p{
     margin-top: 7rem;
     color: #dadada;
+}
+
+.editor-sidebar-header-container{
+    padding: 1.5rem 1.5rem;
+}
+
+.editor-sidebar-trajectory-info-container{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.editor-sidebar-trajectory-name{
+    font-size: 1.3rem;
+}
+
+.editor-sidebar-team-name{
+    color: #dadada;
+}
+
+.editor-sidebar-trajectory-info-header-container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.editor-sidebar-panel-icon-container{
+    font-size: 1.5rem;
+}
+
+.editor-sidebar-trajectory-drop-container{
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+}
+
+.editor-sidebar-trajectory-drop-icon-container{
+    font-size: 1.4rem;
+    margin-top: 5px;
+}
+
+.editor-sidebar-container{
+    background-color: rgba(29, 29, 29, 0.1) !important;
+    border-radius: 1rem;
+    padding: 0;
+    height: 98%;
+    width: 380px;
+    position: absolute;
+    left: .5rem;
+    gap: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    z-index: 200;
+    display: flex;
+    justify-content: space-between;
+}
+
+.editor-sidebar-top-container > div:not(:last-child){
+    border-bottom: 1px solid #212121;
+}
+
+.editor-sidebar-bottom-container > div{
+    border-top: 1px solid #212121;
+}
+
+.trajectory-share-status-container{
+    position: absolute;
+    right: 2rem;
+    width: auto;
+    padding: 1rem;
+    border-radius: 5rem;
+    overflow: hidden;
+    top: 2rem;
+    z-index: 200;
+}
+
+.editor-sidebar-scene-container{
+    padding: 1.5rem;
+}
+
+.editor-sidebar-scene-option-icon-container{
+    background-color: #212121;
+    padding: .8rem;
+    font-size: 1.3rem;
+    border-radius: .5rem;
+}
+
+.editor-sidebar-scene-options-container{
+    display: flex;
+    flex-direction: column;
+    gap: .5rem;
+}
+
+.editor-sidebar-scene-option-container{
+    display: flex;
+    align-items: center;
+    gap: 1.2rem;
+    padding: .5rem;
+    transition: .025s;
+}
+
+.editor-sidebar-scene-option-container:hover{
+    background-color: rgb(85 85 85 / 18%);
+    border-radius: .5rem;
+}
+
+.editor-sidebar-scene-option-title{
+    font-size: 1.2rem;
+}
+
+.trajectory-share-status-icon-container{
+    font-size: 1.6rem;
+}
+
+.editor-sidebar-user-avatar-wrapper{
+    padding: 1.5rem;
+}
+
+.editor-top-centered-options-container{
+    position: absolute;
+    top: 2rem;
+    left: 50%;
+    transform: translate(-50%, 0);
+    display: flex;
+    gap: 1rem;
+    flex-direction: row;
+    height: 55px;
+    width: auto;
+    padding: .5rem;
+}
+
+.editor-top-centered-options-container .editor-sidebar-scene-option-icon-container{
+    background-color: transparent;
+    transition: .1s;
+}
+
+.editor-top-centered-options-container .editor-sidebar-scene-option-icon-container:hover{
+    background-color: #212121;
+}
+
+.editor-scene-zoom-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+    padding: 0 1.5rem;
+    border-radius: 5rem;
+    background-color: rgba(49, 49, 49, 0.8);
 }
