--- a/client/src/assets/stylesheets/general.css
+++ b/client/src/assets/stylesheets/general.css
@@ -45,3 +45,13 @@ i{
     justify-content: center;
     align-items: center;
 }
+
+input[type=number]::-webkit-outer-spin-button,
+input[type=number]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type=number] {
+  -moz-appearance: textfield;
+}
