--- a/client/src/components/organisms/EditorWidget/EditorWidget.css
+++ b/client/src/components/organisms/EditorWidget/EditorWidget.css
@@ -12,11 +12,11 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    cursor: grab;
+    /*cursor: grab;*/
 }
 
 .editor-floating-container:active {
-    cursor: grabbing;
+    /*cursor: grabbing;*/
 }
 
 .editor-floating-header-container {
