--- a/client/src/components/atoms/SimulationCard/SimulationCard.css
+++ b/client/src/components/atoms/SimulationCard/SimulationCard.css
@@ -4,8 +4,9 @@
     cursor: pointer;
 }
 
-.simulation-container:hover .simulation-cover-container{
-    border: 3px solid rgb(37, 137, 255);
+.simulation-container:hover .simulation-cover-container,
+.simulation-container.is-selected .simulation-cover-container{
+    border: 1px solid rgb(37, 137, 255);
 }
 
 .simulation-container:hover .simulation-options-icon-container{
