--- a/client/src/components/molecules/JobsHistory/JobsHistory.css
+++ b/client/src/components/molecules/JobsHistory/JobsHistory.css
@@ -8,4 +8,46 @@
     border-radius: 1rem;
     border: 1px solid #eaeaea;
     backdrop-filter: blur(5px);
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    width: 380px;
+}
+
+.job-left-container{
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+
+.job-container{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: .9rem;
+}
+
+.job-icon-container{
+    width: 1.8rem;
+    height: 1.8rem;
+    border: 1px solid rgb(24, 165, 24);
+    color: rgb(24, 165, 24);
+    border-radius: 50%;
+}
+
+.job-info-container{
+    display: flex;
+    flex-direction: column;
+    gap: .2rem;
+}
+
+.job-name{
+    font-size: .85rem;
+    font-weight: 400;
+}
+
+.job-message{
+    font-weight: 500;
+    font-size: .95rem;
 }
