feat: render the list of loaded trajectories in the dashboard

--- a/client/src/components/atoms/DashboardContainer/DashboardContainer.css
+++ b/client/src/components/atoms/DashboardContainer/DashboardContainer.css
@@ -31,6 +31,15 @@
     display: flex;
     flex-direction: column;
     gap: 2rem;
+    height: 100%;
+    overflow: scroll;
+}
+
+.whitespace-container{
+    width: 100%;
+    height: 250px;
+    background-color: transparent;
+    flex-shrink: 0;
 }
 
 .dashboard-header-container{
