--- a/client/src/components/atoms/SimulationCard/SimulationCard.css
+++ b/client/src/components/atoms/SimulationCard/SimulationCard.css
@@ -4,6 +4,16 @@
     cursor: pointer;
 }
 
+.progress-border-wrapper {
+    position: relative;
+    transition: all 0.3s ease;
+}
+
+.simulation-container.has-jobs{
+    touch-action: none;
+    pointer-events: none;
+}
+
 .simulation-container:hover .simulation-cover-container,
 .simulation-container.is-selected .simulation-cover-container{
     border: 1px solid rgb(37, 137, 255);
@@ -13,15 +23,19 @@
     opacity: 1;
 }
 
+.simulation-container:hover .progress-border-wrapper{
+    transform: scale(1.02);
+}
+
 .simulation-cover-container{
     width: 100%;
-    height: 100%;
+    height: 180px;
     display: flex;
     border-radius: .8rem;
     transition: .1s;
     justify-content: center;
     align-items: center;
-    background-color: #dadada;
+    background-color: #bebebe;
     box-shadow: 0 0 0px 1px rgb(205 205 205 / 80%);
     overflow: hidden;
 }
@@ -51,16 +65,25 @@
 }
 
 .simulation-cover-icon-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
     font-size: 1.8rem;
+    color: #6b7280;
+}
+
+.simulation-caption-left-bottom-container{
+    display: flex;
+    align-items: center;
+    color: #555555;
+    font-size: .9rem;
+    gap: .5rem;
 }
 
 .simulation-options-icon-container{
     font-size: 1.3rem;
     transition: .3s;
     opacity: 0;
-}
-
-.simulation-last-edited{
-    font-size: .9rem;
-    color: #555555;
 }
