--- a/client/src/components/atoms/SimulationCard/SimulationCard.css
+++ b/client/src/components/atoms/SimulationCard/SimulationCard.css
@@ -26,6 +26,7 @@
     width: 100%;
     height: 180px;
     display: flex;
+    border: 1px solid #d9d9d9;
     border-radius: .8rem;
     transition: .1s;
     justify-content: center;
