chore: use preview image instead of rendering the 3D scene in the dashboard

--- a/client/src/components/molecules/TrajectoryPreview/TrajectoryPreview.css
+++ b/client/src/components/molecules/TrajectoryPreview/TrajectoryPreview.css
@@ -3,7 +3,7 @@
     overflow: hidden;
     height: 400px;
     width: 50%;
-    box-shadow: 0 0 8px 0px #555555;
+    /*box-shadow: 0 0 8px 0px #555555;*/
     position: relative;
 }
 
