--- a/client/src/components/atoms/ProtectedRoute/ProtectedRoute.css
+++ b/client/src/components/atoms/ProtectedRoute/ProtectedRoute.css
@@ -5,3 +5,16 @@
     width: 100%;
     height: 100%;
 }
+
+.auth-loading-layer-container{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 300;
+    background-color: rgba(255, 255, 255, 0.2);
+    backdrop-filter: blur(2px);
+    transition: all 0.2s;
+}
