--- a/client/src/components/atoms/auth/ThirdPartySignIn/ThirdPartySignIn.css
+++ b/client/src/components/atoms/auth/ThirdPartySignIn/ThirdPartySignIn.css
@@ -6,6 +6,8 @@
     width: 48%;
     border: 1px solid #c0c0c0;
     border-radius: 2rem;
+    cursor: pointer;
+    transition: all 0.2s;
     padding: 1rem;
 }
 
@@ -16,4 +18,9 @@
 
 .auth-third-party-account-name{
     font-size: 1.1rem;
+}
+
+.auth-third-party-account-container:hover{
+    opacity: .9;
+    border-color: rgb(31, 124, 231);
 }
