--- a/client/src/components/atoms/auth/ThirdPartySignIn/ThirdPartySignIn.css
+++ b/client/src/components/atoms/auth/ThirdPartySignIn/ThirdPartySignIn.css
@@ -24,3 +24,9 @@
     opacity: .9;
     border-color: rgb(31, 124, 231);
 }
+
+@media screen and (max-width: 768px){
+    .auth-third-party-account-container{
+        width: 100%;
+    }
+}
