--- a/client/src/components/atoms/DashboardLayout/DashboardLayout.css
+++ b/client/src/components/atoms/DashboardLayout/DashboardLayout.css
@@ -45,3 +45,9 @@
     background-color: #f5f5f5;
     border-radius: .5rem;
 }
+
+@media screen and (max-width: 768px){
+    .sidebar-container{
+        display: none;
+    }
+}
