--- a/client/src/components/molecules/TrajectoryPreview/TrajectoryPreview.css
+++ b/client/src/components/molecules/TrajectoryPreview/TrajectoryPreview.css
@@ -60,3 +60,10 @@
     bottom: 1rem;
     right: 1rem;
 }
+
+@media screen and (max-width: 768px){
+    .trajectory-preview-container{
+        width: 100%;
+        height: 200px;
+    }
+}
