--- a/client/src/components/organisms/TimestepControls/TimestepControls.css
+++ b/client/src/components/organisms/TimestepControls/TimestepControls.css
@@ -5,6 +5,7 @@
     width: auto;
     transform: translateX(-50%);
     display: flex;
+    margin: 0 auto;
     justify-content: space-between;
     flex-direction: row;
     align-items: center;
@@ -13,9 +14,12 @@
 @media screen and (max-width: 768px) {
     .editor-timestep-controls {
         flex-direction: row;
-        bottom: 1rem;
+        bottom: 2rem;
         gap: 0.5rem;
-        padding: 0.5rem 0.75rem;
+        font-size: .8rem;
+        padding: 0.8rem 0.75rem;
+        display: flex !important;
+        width: 90%;
     }
     
     .editor-timestep-controls-play-pause-button {
