--- a/client/src/components/atoms/AIPromptBox/AIPromptBox.css
+++ b/client/src/components/atoms/AIPromptBox/AIPromptBox.css
@@ -62,3 +62,9 @@
     background-color: transparent;
     width: 100%;
 }
+
+@media screen and (max-width: 768px){
+    .ai-prompt-container-wrapper{
+        display: none;
+    }
+}
