--- a/client/src/components/atoms/DashboardLayout/DashboardLayout.css
+++ b/client/src/components/atoms/DashboardLayout/DashboardLayout.css
@@ -1,6 +1,6 @@
 .dashboard-main{
-    height: 100%;
     display: flex;
+    height: 100%;
 }
 
 .sidebar-container{
@@ -48,6 +48,14 @@
 
 @media screen and (max-width: 768px){
     .sidebar-container{
-        display: none;
+        position: fixed;
+        z-index: 500;
+        background-color: rgba(255, 255, 255, .8);
+        backdrop-filter: blur(5px);
+        visibility: hidden;
+    }
+
+    .sidebar-container[data-isenabled='true']{
+        visibility: unset;
     }
 }
