--- a/client/src/components/atoms/JobQueue/JobQueue.css
+++ b/client/src/components/atoms/JobQueue/JobQueue.css
@@ -13,8 +13,8 @@
 }
 
 .job-icon-container{
-    width: 1.8rem;
-    height: 1.8rem;
+    min-width: 1.8rem;
+    min-height: 1.8rem;
     border-radius: 50%;
 }
 
