fix(services/opendxa): mongoose native upsert method wasn't running 'save' hooks

--- a/client/src/components/organisms/DocumentListing/DocumentListing.css
+++ b/client/src/components/organisms/DocumentListing/DocumentListing.css
@@ -33,9 +33,9 @@
 }
 
 .document-listing-table-container{
-    border: 1px solid #dadada;
     border-radius: .5rem;
     display: flex;
+    box-shadow: 0 0 4px 0 #d4d4d4;
     flex-direction: column;
     gap: 1rem;
 }
